--- a/frontend/styles/_buttons.scss
+++ b/frontend/styles/_buttons.scss
@@ -1,6 +1,7 @@
 button {
   border: 1px solid $green;
   border-radius: .3rem;
+  cursor: pointer;
   font-size: 1.4rem;
   outline: none;
   padding: .7rem 1.5rem;
